  * Increased stack that used at BLAKE3 algorithm to allow calculate
    hashes of inputs with huge (more than 32 KB) length.
  * At implementation of 'SHA3/Keccak' algorithm do not loading whole
    range of data while calculating hash sum of first one.
  * Clang: added workaround code that prevents optimization that cause
    distortion of the function that calculate 'Keccak' and 'SHA3' sums.
    Previous releases for FreeBSD and OpenBSD systems was build by Clang
    compiler.
  * Added 'operating-system::is-windows-server' and
    'platform::is-windows-server' functions.
  * Added new line after target name while print project help for
    target that do not have 'description'.
  * Added calculation of hash sums according to 'xxh32' and 'xxh64'
    algorithms.
  * Fixed encoding to the UTF16BE and UTF16LE symbols that transforming
    into surrogate pairs.
  * Fixed issue at the 'path_get_full_path' function,
    added possibility to deal with paths that contains '..':
    'C:\a..a\', '/tmp/a..a' for example.
  * Function 'platform::get-name()' now return name of platform
    not the name of operation system.
  * Function 'version_exec_function' from version unit allow to work with
    empty arguments - they will be interpreted as zero versions.
  * Allowed to build at Apple macOS environment.
  * WIN32: fixed using at 'echo' task for scenario when output stream
    redirected to the file by capability of operation system -
    for example: 'ant4c.exe > 1.txt'.

 -- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..

ant4c (2020.09)
  * Introduced support of modules.
  * Functions from the path unit allowed to operate with empty paths.
    Function 'combine' can be used for normalizing path.
  * Increased list of symbols to trim from string at 'string::trim'
    function.
  * Replaced script hash functions with hash length at the names with
    'blake2b', 'blake3', 'keccak' and 'sha3'.
  * Added support of 'blake3' and 'keccak' algorithms at the script